// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IP Pools Edit Page render tests should not show purchase action if showPurchaseCTA is false 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "IP Pools",
      "to": "/account/ip-pools",
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": "Delete",
        "onClick": [Function],
        "visible": true,
      },
      Object {
        "component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
        "visible": false,
      },
      Object {
        "content": "Request IPs",
        "onClick": [Function],
        "visible": false,
      },
    ]
  }
  title="My Pool (my-pool)"
>
  <Banner
    marginBottom="500"
    status="warning"
    title="New dedicated IP addresses need to be warmed up"
  >
    <Box
      maxWidth="1200"
    >
      <p>
        In order to establish a positive sending reputation, warm up new dedicated IP addresses by gradually sending more emails.
      </p>
      <Banner.Actions>
        <ExternalLink
          as={[Function]}
          to="https://support.sparkpost.com/customer/portal/articles/1972209-ip-warm-up-overview"
        >
          Read our IP Warm-up Overview
        </ExternalLink>
      </Banner.Actions>
    </Box>
  </Banner>
  <withRouter(Connect(ReduxForm))
    isNew={false}
    onSubmit={[Function]}
  />
  <OGOnlyWrapper
    as={[Function]}
    title="Sending IPs"
  >
    <OGOnlyWrapper
      as={[Function]}
    >
      <Box
        as={[Function]}
        borderBottom={0}
        marginBottom={0}
        sectioned={true}
        title="Sending IPs"
      >
        <p>
          <span>
            There are no IPs in this pool. 
          </span>
          Add dedicated IPs to this pool by moving them from their current pool
          .
        </p>
      </Box>
    </OGOnlyWrapper>
  </OGOnlyWrapper>
  <DeleteModal
    content={
      <p>
        IPs in this pool will be re-assigned to your Default pool.
      </p>
    }
    onCancel={[Function]}
    onDelete={[Function]}
    open={false}
    title="Are you sure you want to delete this IP Pool?"
  />
</Page>
`;

exports[`IP Pools Edit Page render tests should render the edit page correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "IP Pools",
      "to": "/account/ip-pools",
    }
  }
  secondaryActions={
    Array [
      Object {
        "content": "Delete",
        "onClick": [Function],
        "visible": true,
      },
      Object {
        "component": [Function],
        "content": "Purchase IPs",
        "to": "/account/billing",
        "visible": true,
      },
      Object {
        "content": "Request IPs",
        "onClick": [Function],
        "visible": false,
      },
    ]
  }
  title="My Pool (my-pool)"
>
  <Banner
    marginBottom="500"
    status="warning"
    title="New dedicated IP addresses need to be warmed up"
  >
    <Box
      maxWidth="1200"
    >
      <p>
        In order to establish a positive sending reputation, warm up new dedicated IP addresses by gradually sending more emails.
      </p>
      <Banner.Actions>
        <ExternalLink
          as={[Function]}
          to="https://support.sparkpost.com/customer/portal/articles/1972209-ip-warm-up-overview"
        >
          Read our IP Warm-up Overview
        </ExternalLink>
      </Banner.Actions>
    </Box>
  </Banner>
  <withRouter(Connect(ReduxForm))
    isNew={false}
    onSubmit={[Function]}
  />
  <OGOnlyWrapper
    as={[Function]}
    title="Sending IPs"
  >
    <OGOnlyWrapper
      as={[Function]}
    >
      <Box
        as={[Function]}
        borderBottom={0}
        marginBottom={0}
        sectioned={true}
        title="Sending IPs"
      >
        <p>
          <span>
            There are no IPs in this pool. 
          </span>
          Add dedicated IPs to this pool by moving them from their current pool
          , or by 
          <PageLink
            to="/account/billing"
          >
            purchasing new IPs
          </PageLink>
          .
        </p>
      </Box>
    </OGOnlyWrapper>
  </OGOnlyWrapper>
  <DeleteModal
    content={
      <p>
        IPs in this pool will be re-assigned to your Default pool.
      </p>
    }
    onCancel={[Function]}
    onDelete={[Function]}
    open={false}
    title="Are you sure you want to delete this IP Pool?"
  />
</Page>
`;

exports[`IP Pools Edit Page render tests should show loading when data is loading 1`] = `<Loading />`;

exports[`IP Pools Edit Page renderForm tests should show list error msg on error 1`] = `
<ApiErrorBanner
  errorDetails="failed listing pools"
  message="Sorry, we seem to have had some trouble loading your IP pool."
  reload={[Function]}
/>
`;
